# Graphics-Project

./: CMakeLists.txt  README.md  glowingSphereScene.json
OpenGL/: fragmentShader_passthrough.glsl  glfwExample.cpp  vertexShader_perVertexColor.glsl
examples/: test_FrameBuffer.cpp
renderer/: AABoundingBox.cpp  AABoundingBox.h  BVHNode.cpp  BVHNode.h  BlinnPhong.cpp  BlinnPhong.h  Box.cpp  Box.h  CMakeLists.txt  Camera.h  CoordSys  CoordSys.h  FrameBuffer.cpp  FrameBuffer.h  HitStruct.h  Lambertian.cpp  Lambertian.h  Light.h  Makefile  Mirror.cpp  Mirror.h  Ray.h  Renderer.h  SceneContainer.h  Shader.h  Shape.h  Sphere.h  Triangle.h  brokenVector3D.cpp  brokenVector3D.h  cmake_install.cmake  jsonParser.cpp  main  main.cpp  test_FrameBuffer.cpp  test_RayGen.cpp  test_Sphere.cpp  test_Triangle.cpp  test_json.cpp
src/: Vector3D.h
